k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parallel-cooking
spec:
  selector:
    app: parallel-cooking
  ports:
    - name: http
      port: 80
      targetPort: http
